2007-12-10  Neal H. Walfield  <neal@gnu.org>

	* as.c: Don't include <pthread.h>.  Include <hurd/mutex.h>.
	(free_spaces_lock): Make an ss_mutex_t, not a pthread_mutex_t.
	Update users.
	* storage.c: Don't include <pthread.h>.  Include <hurd/mutex.h>.
	(struct storage_desc): Make lock an ss_mutex_t, not a
	pthread_mutex_t.  Update users.
	(storage_descs_lock): Likewise.
	* pager.h: Don't include <pthread.h>.  Include <hurd/mutex.h>.
	(struct pager): Make lock an ss_mutex_t, not a pthread_mutex_t.
	Update users.
	(pagers_lock): Likewise.

2007-12-06  Neal H. Walfield  <neal@gnu.org>

	* exceptions.c (exception_frame_alloc): Correctly set the
	EXCEPTION_PAGE->EXCEPTION_STACK to the allocated frame.
	(utcb_state_save): New function.
	(utcb_state_restore): Likewise.
	(exception_handler_normal): Call utcb_state_restore before
	returning.
	(exception_handler_activated): Save the UTCB state.  If returning
	without requiring a call to exception_handler_normal, then restore
	the UTCB state.

2007-12-05  Neal H. Walfield  <neal@gnu.org>

	* exceptions.c: Include <hurd/slab.h> and "as.h".
	(exception_frame_slab): New local variable.
	(exception_frame_slab_alloc): New function.
	(exception_frame_slab_dealloc): Likewise.
	(exception_frame_alloc): Likewise.
	(exception_handler): Rename from this...
	(exception_handler_activated): ... to this.  Update callers.  Only
	handle the fault if the fault corresponds to the page the stack
	pointer references at the time of the fault or the next stack
	page.
	(exception_handler_normal): New function.
	(exception_handler_init): Initialize exception_frame_slab.
	* ia32-exception-entry.S (EXCEPTION_STACK): New macro.
	(SAVED_EDX): Likewise.
	(EF_SAVED_EAX): Likewise.
	(EF_SAVED_ECX): Likewise.
	(EF_SAVED_EDX): Likewise.
	(EF_SAVED_FLAGS): Likewise.
	(EF_SAVED_IP): Likewise.
	(EF_STACK_START): Likewise.
	(EF_NEXT): Likewise.
	(exception_handler_entry): After calling
	exception_handler_activated, check if the return result is